widgets added for ambientmedia and hueplugin

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.qrcode/1.0/jquery.qrcode.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
     
+    <script type="text/javascript" src="scripts/dynamix/widgets/widgets.js"></script>
     <script type="text/javascript" src="scripts/data.js"></script>
     <script type="text/javascript" src="scripts/script.js"></script>
     <script type="text/javascript" src="scripts/utils.js"></script>
@@ -78,6 +79,10 @@
 					<a href="#" class="ui-btn ui-corner-all">Good Morning!</a>
 				</div>
 			</center>	
+
+			<div id="plugins-list">
+
+			</div>
 		</div><!-- /content -->
 	</div><!-- /page -->
 </body>
