works with qr code sharing

--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
     <script type="text/javascript" src="scripts/dynamix/widgets/widgets.js"></script>
     <script type="text/javascript" src="scripts/data.js"></script>
     <script type="text/javascript" src="scripts/script.js"></script>
+    <script type="text/javascript" src="scripts/dynamix/libs/forge.min.js"></script>
+    <script type="text/javascript" src="scripts/dynamix/dynamix.js"></script>
+    <script type="text/javascript" src="scripts/dynamix/dynamixPairing.js"></script>
     <script type="text/javascript" src="scripts/utils.js"></script>
+    <script type="text/javascript" src="scripts/dynamixUtils.js"></script>
+
 </head>
 
 <body>
