send ambient control commands to gui plugin

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script type="text/javascript" src="scripts/dynamix/dynamixPairing.js"></script>
     <script type="text/javascript" src="scripts/utils.js"></script>
     <script type="text/javascript" src="scripts/dynamixUtils.js"></script>
+    <script type="text/javascript" src="scripts/dynamix/widgets/js/jqColorPicker.min.js"></script>
 
 </head>
 
