made scenes list clickable but untested

--- a/index.html
+++ b/index.html
@@ -29,22 +29,33 @@
 <body>
 	<div data-role="page" id="scopes-page" data-theme="b">
 		<div data-role="header">
-			<h1 id="scopename"> Dynamix Dashboard </h1> 
-		</div><!-- /header -->
+            <center>
+	            <div class="center-wrapper">
+	                <img alt="logo" src="img/logo.png" /> 
+	                <span>Ambient Dashboards</span>
+	            </div>
+            </center>
+        </div>
 		<div role="main" class="ui-content">
-			<h4>Ambient Dynamix Dashboard - No setup, no hassles. <br/><br/> Explore the scopes below!</h4>
+			<h4 style="margin-left: 1em;">The following Dashboards have been shared with you :</h4>
 			<!-- here goes the list of scopes -->
 		</div>
 	</div><!-- /page -->
 
 	<div data-role="page" id="controls-page" data-theme="b">
 		<div data-role="header">
-			<h1>Controls</h1>
-		</div><!-- /header -->
+            <center>
+	            <div class="center-wrapper">
+	                <img alt="logo" src="img/logo.png" /> 
+	                <span>Ambient Dashboards</span>
+	            </div>
+            </center>
+        </div>
 		<div role="main" class="ui-content">
 			<div id="scenes-container">
 				<!-- list of scenes -->
 			</div>	
+			<h4 style="margin-left: 1em;">Available devices : </h4>			
 			<div id="plugins-list">
 				<!-- list of controls, grouped by plugin id --> 
 			</div>
